Fixing EMI and hiding that your are using concurrency